--- a/_config.yml
+++ b/_config.yml
@@ -28,18 +28,22 @@ collections:
   Reaver_in_Air::Legacy:
     output          : true
     permalink       : /:collection/:title/
+    sort_by         : date
     alias           : "Reaver in Air::Legacy"
   Lorcon2_in_Air::Legacy:
     output          : true
     permalink       : /:collection/:title/
+    sort_by         : date
     alias           : "Lorcon2 in Air::Legacy"
   Cryptography_ in_Air::Legacy:
     output          : true
     permalink       : /:collection/:title/
+    sort_by         : date
     alias           : "Cryptograpy in Air::Legacy"
   Features_in_Air::Legacy:
     output          : true
     permalink       : /:collection/:title/
+    sort_by         : date
     alias           : "Features in Air::Legacy"
   
 # Social Media Accounts
