--- a/_config.yml
+++ b/_config.yml
@@ -49,8 +49,8 @@ collections:
 # Social Media Accounts
 email               : "Baseband@cpan.org" 
 linkedin            : 
-github              : "https://github.com/Baseband-processor/Air-Legacy" 
-personal github     : "https://github.com/Baseband-processor" 
+github              : "Baseband-processor/Air-Legacy" 
+personal github     : "Baseband-processor" 
 # website             : 
 
 # Global Variables
