--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ github              : "Baseband-processor/"
 # Global Variables
 statement           : "Designed by DeerRIDER, All Rights Reserved, used by Edoardo Mantovani. All Rights Reserved too"
 toc_level           : 4
-bgtext              : "0123456789ABCFGHKLMNPQRSVWXYZabcdefghijklmnopqrstuvwxyz@#$%&*+-;/[]<>~" # texts randomly displayed in background
+bgtext              : "0123456789ABCFGHKLMNPQRSVWXYZabcdefghijklmnopqrstuvwxyz@#$%&*+-;/[]<>~=" # texts randomly displayed in background
 # Disqus settings（disqus.com）
 # disqus_username     : akiritsu
 # Plugins
