--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ collections:
     alias           : "Suggested Libraries"
     order:
       - Socket.md
-      - Net::Pcap.md
+      - [Net::Pcap](https://metacpan.org/pod/Net::Pcap)
       - Net::Ncap.md
       - Net::Frame.md
       - NetPacket.md
