--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ collections:
     order:
       - Socket.md
       - [Net::Pcap](https://metacpan.org/pod/Net::Pcap)
-      - Net::Ncap.md
+      - [Net::Ncap](https://metacpan.org/pod/Net::Ncap)
       - Net::Frame.md
       - NetPacket.md
       - Net::Write.md
