--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ sass:
 
 # Collections
 collections:
+order:
   Suggested_libraries:
     output          : true
     permalink       : /:collection/:title/
