--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ collections:
     permalink       : /:collection/:title/
     alias           : "Frequently Asked Questions"
     order:
-      - Why_not_stop_to_lorcon2.html
+      - Why not stop to lorcon2?.html
   Ii:
     output          : true
     permalink       : /:collection/:title/
