--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,7 @@ collections:
       - Why (not) Python?.html 
       - Why "Legacy"?.html
       - Why not stop to lorcon2?.html
+      - can I effectively break the latest wireless security protocols using this library?.html
   Ii:
     output          : true
     permalink       : /:collection/:title/
