--- a/_config.yml
+++ b/_config.yml
@@ -96,8 +96,8 @@ github              : "Baseband-processor/"
 
 # Global Variables
 statement           : "Designed by DeerRIDER, All Rights Reserved, used by Edoardo Mantovani. All Rights Reserved too"
-toc_level           : 4
-bgtext              : "01" # texts randomly displayed in background
+toc_level           : 6
+bgtext              : "01010101010101001001010100101" # texts randomly displayed in background
 # Disqus settings（disqus.com）
 # disqus_username     : akiritsu
 # Plugins
